--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -1,34 +1,34 @@
 nav {
-    background: $nav-bg;
-    padding: $padding-xs;
+    background: --nav-bg;
+    padding: --padding-xs;
     //nesting level 1
     ul {
         list-style: none;
-        margin: $clear;
-        padding: $clear;
+        margin: --clear;
+        padding: --clear;
         @extend %flex;
         // nesting level 2
         h2 {
-            color: $font-color !important;
+            color: --font-color !important;
         }
         li {
-            margin: $padding-xs;
-            padding: $padding-m $padding-xl;
-            border-radius: $radius;
+            margin: --padding-xs;
+            padding: --padding-m --padding-xl;
+            border-radius: --radius;
             // nesting level 3
             &:hover {
-                background: $hover !important;
+                background: --hover !important;
             }
             a {
-                color: $font-color;
+                color: --font-color;
                 text-decoration: none;
             }
             &.selected {
-                background: $selected;
-                box-shadow: $box-shadow;
+                background: --selected;
+                box-shadow: --box-shadow;
                 // nesting level 4
                 &:hover {
-                    background: $selected !important;
+                    background: --selected !important;
                 }
             }
         }
