--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,9 +3,12 @@
 // Variables are stored in variables.scss
 // TODO: Compile scss, with CSS output expanded
 @import "_variables.scss";
+@import "_css_variables.scss";
 @import "_mixin.scss";
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,900');
+//@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+//@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,900');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
 @import "_typography.scss"; // TYPOGRAPHY
 @import "_overview.scss"; // MAIN OVERVIEW VIEW
 @import "_navigation.scss"; // NAV
