--- a/styles/_layout-new.scss
+++ b/styles/_layout-new.scss
@@ -18,6 +18,14 @@
 
 img {
     width: 100%;
+    height: auto;
+    max-height: 400px;
+    @media (min-width: 800px) {
+        max-height: 200px;
+    }
+    @media (min-width: 500px) {
+        max-height: 100px;
+    }
 }
 
 
