--- a/styles/_css_variables.scss
+++ b/styles/_css_variables.scss
@@ -1,6 +1,6 @@
     @import "_palette.scss";
      :root {
-        //fonts
+        //font
         --rem-units: 1.225rem;
         --base-rem: 1rem;
         --base-size: 16px;
