--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,27 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Abril+Fatface");
 .divider, nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
+  justify-content: center;
+  align-items: center; }
 
 :root {
   --rem-units: 1.225rem;
   --base-rem: 1rem;
   --base-size: 16px;
-  --font-xxs: calc(var(--font-xs) / 1.225);
-  --font-xs: calc(var(--font-sm) / 1.225);
+  --font-xxs: calc(var(--font-xs) / var(--rem-units));
+  --font-xs: calc(var(--font-sm) / var(--rem-units));
   --font-sm: var(--base-rem);
-  --font-m: calc(var(--font-sm) * 1.225);
-  --font-lg: calc(var(--font-m) * 1.225);
-  --font-xl: calc(var(--font-lg) * 1.225);
+  --font-m: calc(var(--font-sm) * var(--rem-units));
+  --font-lg: calc(var(--font-m) * var(--rem-units));
+  --font-xl: calc(var(--font-lg) * var(--rem-units));
   --font-family: 'Open Sans';
   --font-family-02: 'Abril Fatface', cursive;
   --weight-light: 200;
@@ -31,13 +24,15 @@
   --radius: 2px;
   --circle: 50%;
   --padding-sm: var(--base-rem);
-  --padding-xs: calc(var(--padding-sm) - (.2rem * 3));
-  --padding-m: calc(var(--padding-sm) + .2rem);
-  --padding-lg: calc(var(--padding-m) + .2rem);
-  --padding-xl: calc(var(--padding-lg) + .2rem);
+  --padding-base: --padding-xs: calc(var(--padding-sm) - (var(--padding-base) * 3));
+  --padding-m: calc(var(--padding-sm) + var(--padding-base));
+  --padding-lg: calc(var(--padding-m) + var(--padding-base));
+  --padding-xl: calc(var(--padding-lg) + var(--padding-base));
   --clear: 0;
   --gutter: calc(var(--base-rem) * 8);
-}
+  --fade: .25;
+  --list-height: 200px;
+  --dashed-item: 1px dashed $color07; }
 
 html body {
   font-family: var(--font-family);
@@ -45,111 +40,68 @@ html body {
   margin: var(--clear);
   background-color: #041f1f;
   color: #fff;
-  font-size: var(--base-size);
-}
-
-html body h1 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-html body h2 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-html body h3 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-html body h4 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-html body h5 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-html body h6 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 200;
-  margin: 0;
-}
-
-@media (max-width: 1200px) {
-  html body {
-    font-size: var(--font-xs);
-  }
-}
-
-@media (max-width: 768px) {
-  html body {
-    font-size: var(--font-xxs);
-  }
-}
-
-html body h1 {
-  padding: var(--padding-m) var(--clear);
-  font-size: var(--font-xl);
-}
-
-@media (max-width: 1200px) {
+  font-size: var(--base-size); }
   html body h1 {
-    font-size: var(--font-lg);
-  }
-}
-
-@media (max-width: 768px) {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  html body h2 {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  html body h3 {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  html body h4 {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  html body h5 {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  html body h6 {
+    font-family: "Abril Fatface", cursive;
+    font-weight: 200;
+    margin: 0; }
+  @media (max-width: 1200px) {
+    html body {
+      font-size: var(--font-xs); } }
+  @media (max-width: 768px) {
+    html body {
+      font-size: var(--font-xxs); } }
   html body h1 {
+    padding: var(--padding-m) var(--clear);
+    font-size: var(--font-xl); }
+    @media (max-width: 1200px) {
+      html body h1 {
+        font-size: var(--font-lg); } }
+    @media (max-width: 768px) {
+      html body h1 {
+        font-size: var(--font-m); } }
+  html body h1,
+  html body h3 {
+    color: #1dd3cd; }
+  html body h2 {
     font-size: var(--font-m);
-  }
-}
-
-html body h1,
-html body h3 {
-  color: #1dd3cd;
-}
-
-html body h2 {
-  font-size: var(--font-m);
-  color: #a117a6;
-  padding: var(--clear);
-}
-
-@media (max-width: 1200px) {
-  html body h2 {
-    font-size: var(--font-sm);
-  }
-}
-
-@media (max-width: 768px) {
-  html body h2 {
-    font-size: var(--font-xs);
-  }
-}
-
-html body p {
-  margin: var(--clear);
-}
-
-html body label {
-  color: #f7f5c5;
-  display: block;
-}
-
-html body .col-6-layout header {
-  color: #a117a6;
-  font-weight: var(--weight-bold);
-  font-family: var(--font-family-02);
-}
+    color: #a117a6;
+    padding: var(--clear); }
+    @media (max-width: 1200px) {
+      html body h2 {
+        font-size: var(--font-sm); } }
+    @media (max-width: 768px) {
+      html body h2 {
+        font-size: var(--font-xs); } }
+  html body p {
+    margin: var(--clear); }
+  html body label {
+    color: #f7f5c5;
+    display: block; }
+  html body .col-6-layout header {
+    color: #a117a6;
+    font-weight: var(--weight-bold);
+    font-family: var(--font-family-02); }
 
 html .divider {
   font-weight: var(--weight-regular);
@@ -157,268 +109,195 @@ html .divider {
   color: #041f1f;
   font-family: var(--font-family-02);
   text-transform: var(--caps);
-  font-size: var(--font-m);
-}
-
-@media (max-width: 1200px) {
-  html .divider {
-    font-size: var(--font-sm);
-  }
-}
-
-@media (max-width: 768px) {
-  html .divider {
-    font-size: var(--font-xs);
-  }
-}
+  font-size: var(--font-m); }
+  @media (max-width: 1200px) {
+    html .divider {
+      font-size: var(--font-sm); } }
+  @media (max-width: 768px) {
+    html .divider {
+      font-size: var(--font-xs); } }
 
 .divider {
   border-radius: var(--radius);
   padding: var(--padding-xs);
   margin: var(--padding-xs) var(--clear);
-  height: 40px;
-}
-
-.divider div {
-  padding: var(--padding-xs);
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
+  height: 40px; }
+  .divider div {
+    padding: var(--padding-xs);
+    align-self: center; }
 
 .field {
-  padding: var(--padding-m) var(--clear);
-}
+  padding: var(--padding-m) var(--clear); }
 
 input {
-  display: none;
-}
+  display: none; }
 
 nav {
-  background: #117976;
-  padding: 0.4rem;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul h2 {
-  color: #fff !important;
-}
-
-nav ul li {
-  margin: 0.4rem;
-  padding: 1.2rem 1.6rem;
-  border-radius: 2px;
-}
-
-nav ul li:hover {
-  background: #14908b !important;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-nav ul li.selected {
-  background: #17a6a1;
-  -webkit-box-shadow: 1px 1px 2px #117976;
-          box-shadow: 1px 1px 2px #117976;
-}
-
-nav ul li.selected:hover {
-  background: #17a6a1 !important;
-}
+  background: --nav-bg;
+  padding: --padding-xs; }
+  nav ul {
+    list-style: none;
+    margin: --clear;
+    padding: --clear; }
+    nav ul h2 {
+      color: --font-color !important; }
+    nav ul li {
+      margin: --padding-xs;
+      padding: --padding-m --padding-xl;
+      border-radius: --radius; }
+      nav ul li:hover {
+        background: --hover !important; }
+      nav ul li a {
+        color: --font-color;
+        text-decoration: none; }
+      nav ul li.selected {
+        background: --selected;
+        box-shadow: --box-shadow; }
+        nav ul li.selected:hover {
+          background: --selected !important; }
 
 .content {
-  padding: var(--padding-sm);
-}
+  padding: var(--padding-sm); }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
+  flex-wrap: wrap; }
 
 .column {
   --columns: 12;
   --width-default: 0;
   --width: var(--width-mobile, var(--width-default));
-  -ms-flex-preferred-size: calc(var(--width) / var(--columns) * 100%);
-      flex-basis: calc(var(--width) / var(--columns) * 100%);
-}
+  flex-basis: calc(var(--width) / var(--columns) * 100%); }
+
+img {
+  width: 100%;
+  height: auto;
+  max-height: 400px; }
+  @media (min-width: 800px) {
+    img {
+      max-height: 200px; } }
+  @media (min-width: 500px) {
+    img {
+      max-height: 100px; } }
 
 /* sections */
 header {
   --width-mobile: 12;
-  padding-bottom: 20px;
-}
+  padding-bottom: 20px; }
 
 h2 {
-  --width-mobile: 8;
-}
+  --width-mobile: 8; }
 
 .date {
   --width-mobile: 12;
   --width-desktop: calc(var(--columns) / 7);
-  --width: calc(var(--columns) / 7);
-}
+  --width: calc(var(--columns) / 7); }
 
 .divider,
 h1,
 .col-12-layout {
-  --width-mobile: 12;
-}
+  --width-mobile: 12; }
 
 .col-6-layout {
   --width-mobile: 12;
-  --width-desktop: 6;
-}
+  --width-desktop: 6; }
 
 .header {
-  --width-mobile: 12;
-}
+  --width-mobile: 12; }
 
 .field {
   --width-mobile: 6;
   --width-tablet: 4;
-  --width-desktop: 3;
-}
+  --width-desktop: 3; }
 
 .small .column {
   --columns: 6;
   --width-default: 0;
   --width: var(--width-mobile, var(--width-default));
-  -ms-flex-preferred-size: calc(var(--width) / var(--columns) * 100%);
-      flex-basis: calc(var(--width) / var(--columns) * 100%);
-}
+  flex-basis: calc(var(--width) / var(--columns) * 100%); }
 
 .small .header,
 .small img {
-  --width-mobile: 6;
-}
+  --width-mobile: 6; }
 
 .small .field {
-  --width-mobile: 2;
-}
+  --width-mobile: 2; }
 
 .column.container.small {
   --width-mobile: 6;
   --width-tablet: 3;
-  --width-desktop: 3;
-}
+  --width-desktop: 3; }
 
 .activity {
   background-color: #a117a6;
-  color: #fff;
-}
+  color: #fff; }
 
 .hotel {
   background-color: #14908b;
-  color: #fff;
-}
+  color: #fff; }
 
 .flight {
   background-color: #0a4c4a;
-  color: #fff;
-}
+  color: #fff; }
 
 @media (min-width: 0px) and (max-width: 650px) {
   .column,
   .date {
     --columns: 1;
-    --width: var(--width-mobile, var(--width-default));
-  }
-  .column .list,
-  .date .list {
-    margin: var(--padding-m);
-  }
+    --width: var(--width-mobile, var(--width-default)); }
+    .column .list,
+    .date .list {
+      margin: var(--padding-m); }
   .column.container.small {
-    --width: var(--width-mobile, var(--width-default));
-  }
-}
+    --width: var(--width-mobile, var(--width-default)); } }
 
 @media (min-width: 650px) and (max-width: 800px) {
   .column,
   .date {
-    --width: var(--width-tablet, var(--width-mobile, var(--width-default)));
-  }
-  .column .list,
-  .date .list {
-    margin: var(--clear);
-  }
+    --width: var(--width-tablet, var(--width-mobile, var(--width-default))); }
+    .column .list,
+    .date .list {
+      margin: var(--clear); }
   .column.container.small {
-    --width: var(--width-tablet, var(--width-mobile, var(--width-default)));
-  }
-}
+    --width: var(--width-tablet, var(--width-mobile, var(--width-default))); } }
 
 @media (min-width: 800px) {
   .column,
   .date {
-    --width: var(--width-desktop, var(--width-tablet, var(--width-mobile, var(--width-default))));
-  }
-  .column .list,
-  .date .list {
-    margin: var(--clear);
-  }
+    --width: var(--width-desktop, var(--width-tablet, var(--width-mobile, var(--width-default)))); }
+    .column .list,
+    .date .list {
+      margin: var(--clear); }
   .column.container.small {
-    --width: var(--width-desktop, var(--width-tablet, var(--width-mobile, var(--width-default))));
-  }
-}
+    --width: var(--width-desktop, var(--width-tablet, var(--width-mobile, var(--width-default)))); } }
 
 @media only screen and (orientation: landsape) {
   .container {
-    margin: var(--padding-m);
-  }
-}
+    margin: var(--padding-m); } }
 
 .date .list {
-  border: 1px dashed #117976;
+  border: var(--dashed-item);
   padding: var(--padding-sm);
   background: #041b1a;
-  min-height: 200px;
-}
-
-@media only screen and (max-width: 768px) {
-  .date .list {
-    min-height: auto;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .date .list h3 {
-    padding: var(--padding-xs) 0 !important;
-  }
-}
-
-.date .list hr {
-  border: 0.5px solid #0a4c4a;
-}
-
-@media only screen and (max-width: 768px) {
+  min-height: var(--list-height); }
+  @media only screen and (max-width: 768px) {
+    .date .list {
+      min-height: auto; } }
+  @media only screen and (max-width: 768px) {
+    .date .list h3 {
+      padding: var(--padding-xs) 0 !important; } }
   .date .list hr {
-    display: none;
-  }
-}
-
-.date .list .event {
-  border-radius: 2px;
-  padding: var(--padding-xs);
-  margin-bottom: var(--padding-xs);
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-}
+    border: 0.5px solid #0a4c4a; }
+    @media only screen and (max-width: 768px) {
+      .date .list hr {
+        display: none; } }
+  .date .list .event {
+    border-radius: var(--radius);
+    padding: var(--padding-xs);
+    margin-bottom: var(--padding-xs);
+    justify-content: left; }
 
 .fade {
-  opacity: 0.25;
-}
-/*# sourceMappingURL=styles.css.map */
+  opacity: var(--fade); }
