--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center; }
 
-:root {
+html {
   --rem-units: 1.225rem;
   --base-rem: 1rem;
   --base-size: 16px;
