--- a/styles/partial/_doc-style.scss
+++ b/styles/partial/_doc-style.scss
@@ -1,4 +1,9 @@
-//classes just for the documentation
+/******************************************************
+
+      THESE STYLES ARE JUST USED FOR THE DOC SITE
+
+******************************************************/
+
 .code,
 code {
     display: inline;
