--- a/styles/partial/_table.scss
+++ b/styles/partial/_table.scss
@@ -1,3 +1,9 @@
+/******************************************************
+
+      TABLE STYLING
+
+******************************************************/
+
 #{$prefix} {
     &table {
         margin-top: $padding-lg;
