--- a/styles/partial/_theme.palette.scss
+++ b/styles/partial/_theme.palette.scss
@@ -1,4 +1,15 @@
-//COLORS
+/******************************************************
+
+      Palette Variables
+
+      Additional palette files can be created and added 
+      to _theme.scss to override this default theme.
+
+******************************************************/
+
+
+/***** COLORS *****/
+
 $color00: transparent;
 $color01: #333;
 $color02: #fff;
@@ -7,19 +18,31 @@ $color04: #0b2c72; // Primary
 $color05: lighten(#0b2c72, 60); // Secondary
 $color06: #ccc; // Alternate
 
-//FONTS
+/***** FONT *****/
+
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Patrick+Hand+SC");
-$font-family: "Montserrat", sans-serif;
+$font-family: "Montserrat",
+sans-serif;
 $font-family-02: "Patrick Hand SC";
 $base: 14px;
 :root {
     --base: 14px;
 }
+
 $base-rem: 1em;
 $rem-units: 1.225rem;
-$font-xxs: calc(var(--base) + (.225rem / .25));
-$font-xs: calc(var(--base) - (.225rem));
+$font-xxs: calc(var(--base)+(0.225rem / 0.25));
+$font-xs: calc(var(--base) - (0.225rem));
 $font-sm: $base;
-$font-m: calc(var(--base) + .225rem);
-$font-lg: calc(var(--base) + (.225rem * 2));
-$font-xl: calc(var(--base) + (.225rem * 3));
+$font-m: calc(var(--base)+0.225rem);
+$font-lg: calc(var(--base)+(0.225rem * 2));
+$font-xl: calc(var(--base)+(0.225rem * 3));
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 600;
+
+/***** RESPONSIVE GRID *****/
+$columns: 6;
+$breakpoint-sm: 500px;
+$breakpoint-m: 768px;
+$breakpoint-lg: 1024px;
