--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,16 +5,34 @@
 
       Theme Variables
 
+      UTILIZE THIS PAGE TO CHANGE ANY PROPERTIES THAT 
+      WILL HAVE DOWNSTREAM EFFECTS ACROSS THE FRAMEWORK.
+
+      IF THERE IS A VARIABLE ON THIS PAGE YOU WOULD LIKE
+      TO CHANGE, GO TO _THEME.PALETTE.SCSS TO 
+      CHANGE THE VARIABLE.
+
 ******************************************************/
+/******************************************************
+
+      Palette Variables
+
+      Additional palette files can be created and added 
+      to _theme.scss to override this default theme.
+
+******************************************************/
+/***** COLORS *****/
+/***** FONT *****/
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Patrick+Hand+SC");
 :root {
   --base: 14px;
 }
 
+/***** RESPONSIVE GRID *****/
 /***** FONT *****/
 /***** COLORS *****/
 /*
-    Always include the following for bg/font:
+    Always include the following in any new classes for bg/font:
     background: map-get($default, bg);
     color: map-get($default, color);
 */
@@ -24,6 +42,15 @@
       CS Framework Global Variables
 
 ******************************************************/
+/***** FONTS *****/
+/***** BACKGROUND COLORS *****/
+/***** BORDERS *****/
+/***** PADDING/MARGIN *****/
+/***** MEDIA QUERY BREAKPOINTS *****/
+/***** BORDER RADIUS *****/
+/***** OVERRIDE *****/
+/***** BOX SHADOW *****/
+/***** NAV *****/
 /******************************************************
 
       Media Query Mixin
@@ -41,37 +68,37 @@ base {
 }
 
 h1 {
-  font-size: calc(var(--base) + (.225rem * 3));
+  font-size: calc(var(--base)+(0.225rem * 3));
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
 
 h2 {
-  font-size: calc(var(--base) + (.225rem * 2));
+  font-size: calc(var(--base)+(0.225rem * 2));
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
 
 h3 {
-  font-size: calc(var(--base) + .225rem);
+  font-size: calc(var(--base)+0.225rem);
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
 
 h4 {
-  font-size: calc(var(--base) + .225rem);
+  font-size: calc(var(--base)+0.225rem);
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
 
 h5 {
-  font-size: calc(var(--base) + .225rem);
+  font-size: calc(var(--base)+0.225rem);
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
 
 h6 {
-  font-size: calc(var(--base) + .225rem);
+  font-size: calc(var(--base)+0.225rem);
   font-family: "Montserrat", sans-serif;
   margin: 0px;
 }
@@ -94,7 +121,7 @@ html {
 }
 
 h1, h2 {
-  margin: 10px 5px;
+  margin: calc(map-get($padding, sm)*4) calc(map-get($padding, sm)*2);
 }
 
 @media only screen and (max-width: 500px) {
@@ -104,7 +131,7 @@ h1, h2 {
 }
 
 h3, h4, h5, h6 {
-  margin: 5px;
+  margin: calc(map-get($padding, sm)*2);
 }
 
 @media only screen and (max-width: 500px) {
@@ -119,11 +146,11 @@ h1 {
 }
 
 h2 {
-  font-size: calc(var(--base) + (.225rem * 2));
+  font-size: calc(var(--base)+(0.225rem * 2));
 }
 
 h3 {
-  font-size: calc(var(--base) + (.225rem * 2));
+  font-size: calc(var(--base)+(0.225rem * 2));
   font-weight: 300;
   color: #0b2c72;
 }
@@ -134,13 +161,13 @@ h5 {
 }
 
 h6 {
-  font-size: calc(var(--base) - (.225rem));
+  font-size: calc(var(--base) - (0.225rem));
   color: #0b2c72;
 }
 
 p {
   font-size: 14px;
-  margin: 5px;
+  margin: calc(map-get($padding, sm)*2);
 }
 
 @media only screen and (max-width: 500px) {
@@ -149,6 +176,14 @@ p {
   }
 }
 
+/******************************************************
+
+      RESPONSIVE GRID LAYOUT STYLING
+
+******************************************************/
+/***** COLUMNS AND ROWS *****/
+/***** GRID MIXIN *****/
+/***** GRID LAYOUT *****/
 .cs-container {
   display: -ms-grid;
   display: grid;
@@ -164,13 +199,13 @@ p {
 
 @media only screen and (max-width: 500px) {
   .cs-container {
-    padding: 15px;
+    padding: calc(map-get($padding, sm)*6);
   }
 }
 
 @media only screen and (max-width: 768px) {
   .cs-container {
-    padding: 10px;
+    padding: calc(map-get($padding, sm)*4);
   }
 }
 
@@ -745,6 +780,7 @@ p {
   grid-column: span 6;
 }
 
+/***** LAYOUT *****/
 .cs-body {
   margin: 0px auto;
   max-width: 1024px;
@@ -757,6 +793,11 @@ p {
   }
 }
 
+/******************************************************
+
+      NAVIGATION STYLING
+
+******************************************************/
 .cs-nav {
   display: -ms-grid;
   display: grid;
@@ -793,7 +834,7 @@ p {
 
 .cs-nav ul li {
   margin: 5px;
-  padding: 2px 10px;
+  padding: 2px calc(map-get($padding, sm)*4);
   border-radius: 50px;
 }
 
@@ -822,6 +863,11 @@ p {
   color: #fff;
 }
 
+/******************************************************
+
+      BUTTON STYLING
+
+******************************************************/
 .cs-btn {
   background: #ccc;
   color: #333;
@@ -923,13 +969,18 @@ p {
   width: 200px;
 }
 
+/******************************************************
+
+      CARD STYLING
+
+******************************************************/
 .cs-card {
   background: #eee;
   color: #333;
   -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
           box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
   border-radius: 2px;
-  margin: 10px;
+  margin: calc(map-get($padding, sm)*4);
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: auto 2fr auto;
@@ -937,28 +988,33 @@ p {
 }
 
 .cs-card .cs-title {
-  font-size: calc(var(--base) + .225rem);
-  padding: 5px;
+  font-size: calc(var(--base)+0.225rem);
+  padding: calc(map-get($padding, sm)*2);
   font-weight: 600;
   color: #0b2c72;
-  padding-top: 10px;
+  padding-top: calc(map-get($padding, sm)*4);
 }
 
 .cs-card .cs-body {
-  padding: 10px 5px;
+  padding: calc(map-get($padding, sm)*4) calc(map-get($padding, sm)*2);
   margin: 0px;
 }
 
 .cs-card .cs-actions {
   border-top: 1px solid #ccc;
-  padding: 5px;
+  padding: calc(map-get($padding, sm)*2);
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
 }
 
+/******************************************************
+
+      TABLE STYLING
+
+******************************************************/
 .cs-table {
-  margin-top: 15px;
+  margin-top: calc(map-get($padding, sm)*6);
   border: 1px solid #eee;
   padding: 0px !important;
   grid-gap: 0;
@@ -984,7 +1040,7 @@ p {
 
 @media only screen and (max-width: 768px) {
   .cs-table .cs-row div:first-child {
-    padding-left: 10px;
+    padding-left: calc(map-get($padding, sm)*4);
   }
 }
 
@@ -1003,6 +1059,12 @@ p {
   background: #eee;
 }
 
+/******************************************************
+
+      FORMATTING
+
+******************************************************/
+/***** PADDING *****/
 .cs-padding-default {
   padding: 0px;
 }
@@ -1020,43 +1082,38 @@ p {
 }
 
 .cs-padding-sm {
-  padding: 5px;
+  padding: calc(map-get($padding, sm)*2);
 }
 
 .cs-margin-sm {
-  margin: 5px;
+  margin: calc(map-get($padding, sm)*2);
 }
 
 .cs-padding-m {
-  padding: 10px;
+  padding: calc(map-get($padding, sm)*4);
 }
 
 .cs-margin-m {
-  margin: 10px;
+  margin: calc(map-get($padding, sm)*4);
 }
 
 .cs-padding-lg {
-  padding: 15px;
+  padding: calc(map-get($padding, sm)*6);
 }
 
 .cs-margin-lg {
-  margin: 15px;
+  margin: calc(map-get($padding, sm)*6);
 }
 
 .cs-padding-xl {
-  padding: 20px;
+  padding: calc(map-get($padding, sm)*8);
 }
 
 .cs-margin-xl {
-  margin: 20px;
+  margin: calc(map-get($padding, sm)*8);
 }
 
-html,
-body {
-  margin: 0px;
-  padding: 0px;
-}
-
+/***** FLEX *****/
 .cs-nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1069,6 +1126,18 @@ body {
           align-items: center;
 }
 
+/***** OVERRIDES *****/
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+/******************************************************
+
+      THESE STYLES ARE JUST USED FOR THE DOC SITE
+
+******************************************************/
 .code,
 code {
   display: inline;
@@ -1099,7 +1168,7 @@ code {
 
 .framework-header {
   text-align: center;
-  padding: 20px 20px 2px 20px;
+  padding: calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) 2px calc(map-get($padding, sm)*8);
 }
 
 .framework-subheader {
@@ -1148,7 +1217,7 @@ hr {
 }
 
 .note {
-  font-size: calc(var(--base) + (.225rem / .25));
+  font-size: calc(var(--base)+(0.225rem / 0.25));
   font-style: italic;
 }
 
@@ -1162,6 +1231,6 @@ hr {
 }
 
 h3 {
-  margin: 20px 20px 20px 0px;
+  margin: calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) 0px;
 }
 /*# sourceMappingURL=styles.css.map */
