--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ html {
 }
 
 h1, h2 {
-  margin: calc(map-get($padding, sm)*4) calc(map-get($padding, sm)*2);
+  margin: 10px 5px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -131,7 +131,7 @@ h1, h2 {
 }
 
 h3, h4, h5, h6 {
-  margin: calc(map-get($padding, sm)*2);
+  margin: 5px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -167,7 +167,7 @@ h6 {
 
 p {
   font-size: 14px;
-  margin: calc(map-get($padding, sm)*2);
+  margin: 5px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -199,13 +199,13 @@ p {
 
 @media only screen and (max-width: 500px) {
   .cs-container {
-    padding: calc(map-get($padding, sm)*6);
+    padding: 15px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .cs-container {
-    padding: calc(map-get($padding, sm)*4);
+    padding: 10px;
   }
 }
 
@@ -834,7 +834,7 @@ p {
 
 .cs-nav ul li {
   margin: 5px;
-  padding: 2px calc(map-get($padding, sm)*4);
+  padding: 2px 10px;
   border-radius: 50px;
 }
 
@@ -980,7 +980,7 @@ p {
   -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
           box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
   border-radius: 2px;
-  margin: calc(map-get($padding, sm)*4);
+  margin: 10px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: auto 2fr auto;
@@ -989,20 +989,20 @@ p {
 
 .cs-card .cs-title {
   font-size: calc(var(--base)+0.225rem);
-  padding: calc(map-get($padding, sm)*2);
+  padding: 5px;
   font-weight: 600;
   color: #0b2c72;
-  padding-top: calc(map-get($padding, sm)*4);
+  padding-top: 10px;
 }
 
 .cs-card .cs-body {
-  padding: calc(map-get($padding, sm)*4) calc(map-get($padding, sm)*2);
+  padding: 10px 5px;
   margin: 0px;
 }
 
 .cs-card .cs-actions {
   border-top: 1px solid #ccc;
-  padding: calc(map-get($padding, sm)*2);
+  padding: 5px;
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
@@ -1014,7 +1014,7 @@ p {
 
 ******************************************************/
 .cs-table {
-  margin-top: calc(map-get($padding, sm)*6);
+  margin-top: 15px;
   border: 1px solid #eee;
   padding: 0px !important;
   grid-gap: 0;
@@ -1040,7 +1040,7 @@ p {
 
 @media only screen and (max-width: 768px) {
   .cs-table .cs-row div:first-child {
-    padding-left: calc(map-get($padding, sm)*4);
+    padding-left: 10px;
   }
 }
 
@@ -1082,35 +1082,35 @@ p {
 }
 
 .cs-padding-sm {
-  padding: calc(map-get($padding, sm)*2);
+  padding: 5px;
 }
 
 .cs-margin-sm {
-  margin: calc(map-get($padding, sm)*2);
+  margin: 5px;
 }
 
 .cs-padding-m {
-  padding: calc(map-get($padding, sm)*4);
+  padding: 10px;
 }
 
 .cs-margin-m {
-  margin: calc(map-get($padding, sm)*4);
+  margin: 10px;
 }
 
 .cs-padding-lg {
-  padding: calc(map-get($padding, sm)*6);
+  padding: 15px;
 }
 
 .cs-margin-lg {
-  margin: calc(map-get($padding, sm)*6);
+  margin: 15px;
 }
 
 .cs-padding-xl {
-  padding: calc(map-get($padding, sm)*8);
+  padding: 20px;
 }
 
 .cs-margin-xl {
-  margin: calc(map-get($padding, sm)*8);
+  margin: 20px;
 }
 
 /***** FLEX *****/
@@ -1168,7 +1168,7 @@ code {
 
 .framework-header {
   text-align: center;
-  padding: calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) 2px calc(map-get($padding, sm)*8);
+  padding: 20px 20px 2px 20px;
 }
 
 .framework-subheader {
@@ -1231,6 +1231,6 @@ hr {
 }
 
 h3 {
-  margin: calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) calc(map-get($padding, sm)*8) 0px;
+  margin: 20px 20px 20px 0px;
 }
 /*# sourceMappingURL=styles.css.map */
